dev/demo_page/demo.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Roboto', sans-serif;
}

#wrapper {
  margin: 10px 20px 20px;
}

a {
  text-decoration: none;
  color: #1e74b1;
}
a:hover {
  color: #08a203;
  border-bottom: 1px solid;
}

h1, h2, h3 {
  margin-bottom: 10px;
}
h1 {
  margin-top: 0;
  color: #777;
}
h2 {
  margin-top: 35px;
  color: #555;
}
h3 {
  margin-top: 20px;
  margin-bottom: 5px;
  color: #333;
}

p {
  padding: 5px 10px;
  line-height: 21px;
}

input, textarea {
  font-size: 16px;
  outline: none;
  border: 2px solid #b7c7d8;
  border-radius: 3px;
  padding: 4px 6px;
  background: #fff;
  color: #444;
}

input:focus, textarea:focus {
  border: 2px solid #33547d;
  background: #fff;
  color: #222;
}
#flexibleCode {
  margin-top: 5px;
  border-color: #bbd8c2;
}
#flexibleCode:focus {
  border-color: #367d4e;
}

input {
  width: 50%;
  max-width: 300px;
}

.toggle {
  margin: -10px 0 5px;
  font-size: 14px;
  color: #aaa;
  cursor: pointer;
}
.toggle.active {
  color: #555;
}
.toggle .icon {
  font-size: 22px;
  margin-right: 5px;
  position: relative;
  top: 1px;
}

textarea {
  width: 100%;
  max-width: 600px;
  height: 100px;
}
textarea.code {
  font-family: 'Droid Sans Mono', monospace;
  font-size: 13px;
  height: 400px;
}

